--- a/Main.html
+++ b/Main.html
@@ -40,7 +40,7 @@
 <div class="hero container_12">
     <div class="grid_12">
       <h1>Easy To Search</h1>
-      <h3> <i>Choose The Best Person For your Life And Make your Life Beautiful<i></h3>
+      <h3> Choose The Best Person For your Life And Make your Life Beautiful</h3>
       </div>
       <div class="main container_12">
           <img src="images/banner3.jpg">
