--- a/New.html
+++ b/New.html
@@ -33,25 +33,25 @@
     <!-- The Hero image and content -->
     <div class="main2 container_12">
          <h3>Building Marriages With Strong Foundations</h3>
-      <img src="images/4.jpg">
+      <img src="images/SM.jpg">
     </div>
       <!-- The Entire Header Section -->
     <div class="service container_12">
         <h1>Our Services</h1>
         <div class="grid_4" alpha>
-            <img src="images/Sai.jpg">
+            <img src="images/click.jpg">
             <h2>Searching For A Partner</h2>
             <h5>We Help You</h5>
               <p>For Your Brightest Future We Will Be The Bridge <a href="#">Read More..</a></p>
         </div>
          <div class="grid_4">
-          <img src="images/ban2.jpg">
+          <img src="images/wed4.jpg">
           <h2>Contact Independently</h2>
           <h5> No Mediator</h5>
           <p>We Will Show You The Your Future With Good Qualities <a href="#">Read More..</a></p>
           </div>
         <div class="grid_4"  omega>
-                <img src="images/pre.jpg" >
+                <img src="images/matrimonial.jpg" >
                 <h2>Try The New Things</h2>
                 <h5>Find Awesome</h5>
                 <p>We Will Find  The Perfect Match For You <a href="#">Read More..</a></p>
@@ -86,33 +86,33 @@
             </div>
           </div>
           <!-- The Total Footer Section -->
-<div class="footer container_12">
-  <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
-  </h4>
-    <div class="grid_4" alpha>
-      <h1> Contact us</h1>
-      <form><h4>Subscribe  Here For More Details</h4>
-              EMAIL:  <input type="Email" value="Email">
-          <Input type="submit" value="Submit" name="Submit">
-        </form>
-      </div>
-  <div class="grid_4">
-    <a href="#">About Bandhan </a>
-    <a href="#">Blog </a>
-    <a href="#">Contact </a>
-    <a href="#">Terms </a>
-    <a href="#">Privacy</a>
-   </div>
-   <div class="grid_4" omega>
-     <h4>Join Us In The Social Media
-     And Get Connected With Us</h4>
-      <a href="#"> <img src="images/facebook.jpg"></a>
-      <a href="#"><img src="images/twiter.jpg"></a>
-      <a href="#"><img src="images/orkut.jpg"></a>
+          <div class="footer container_12">
 
-   </div>
-  </div>
-</div>
+              <div class="grid_4" alpha>
+                <h1> Contact us</h1>
+                  <p> P.sairamreddy</p>
+                    <p>Mobile No:8519932521</p>
+                    <p> Email Id:Sairamreddy555@gmail.com</p>
+                    <P>MyMatrimonial@yahoo.com</p>
+                </div>
+            <div class="grid_4">
+              <a href="#">About Bandhan </a>
+              <a href="#">Blog </a>
+              <a href="#">Contact </a>
+              <a href="#">Terms </a>
+              <a href="#">Privacy</a>
+             </div>
+             <div class="grid_4" omega>
+               <h4>Join Us In The Social Media</h4>
+                <a href="#"> <img src="images/facebook2.png"></a>
+                <a href="#"><img src="images/twitter.png"></a>
+                <a href="#"><img src="images/youtube.jpg"></a>
+             </div>
+
+            </div>
+            <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
+            </h4>
+          </div>
 
  </body>
  </html>
