--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
       <!-- TOtal Three Services imagesand content -->
     <div class="service container_12">
         <div class="grid_4" alpha>
-            <img src="images/Sai.jpg">
+            <img src="images/click.jpg">
             <h2>Searching for a Partner</h2>
             <!-- <h5>We Help you</h5>
               <p>For your brightest Future We Will be the Bridge</p> -->
@@ -66,19 +66,19 @@
           <!-- TOtal Three Services imagesand content -->
   <div class="service2 container_12">
       <div class="grid_4" alpha>
-        <img src="images/4.jpg">
+        <img src="images/1015.jpg">
         <h2> Make It Treditionally</h2>
         <!-- <h5> Follow It And Be Happy</h5>
         <p>We Will Help you to Follow Your Treditions</p> -->
       </div>
       <div class="grid_4">
-        <img src="images/ban2.jpg">
+        <img src="images/wed4.jpg">
         <h2>Make A Happy Weadding</h2>
         <!-- <h5></h5>
         <p></p> -->
       </div>
       <div class="grid_4">
-        <img src="images/new2.jpg">
+        <img src="images/matrimonial.jpg">
         <h2>Search For The Partner</h2>
       <!-- <h5></h5>
       <p></p> -->
@@ -86,13 +86,14 @@
    </div>
   <!-- The Footer Section -->
   <div class="footer container_12">
+
       <div class="grid_4" alpha>
         <h1> Contact us</h1>
-        <form><h4>Subscribe  Here For More Details</h4>
-                EMAIL:  <input type="Email" value="Email">
-            <Input type="submit" value="Submit" name="Submit">
-          </form>
-        </div>
+        <p> P.sairamreddy</p>
+        <p>Mobile No:8519932521</p>
+        <p> Email Id:Sairamreddy555@gmail.com</p>
+        <P>MyMatrimonial@yahoo.com</p>
+      </div>
     <div class="grid_4">
       <a href="#">About Bandhan </a>
       <a href="#">Blog </a>
@@ -101,15 +102,15 @@
       <a href="#">Privacy</a>
      </div>
      <div class="grid_4" omega>
-       <h4>Join Us In The Social Media
-       And Get Connected With Us</h4>
-        <a href="#"> <img src="images/facebook.jpg"></a>
-        <a href="#"><img src="images/twiter.jpg"></a>
-        <a href="#"><img src="images/orkut.jpg"></a>
+        <h4>Join Us In The Social Media</h4>
+        <a href="#"> <img src="images/facebook2.png"></a>
+        <a href="#"><img src="images/twitter.png"></a>
+        <a href="#"><img src="images/youtube.jpg"></a>
      </div>
+
     </div>
+    <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
+    </h4>
   </div>
-   <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
-   </h4>
    </body>
    </html>
