--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
               </ul>
             </nav>
           </div>
-      </div>
+      </div><!-- The Entire Header Section ended-->
       <!-- Heading and home links -->
       <div class="port container_12">
           <div class="grid_8">
@@ -41,26 +41,20 @@
                       </ul>
                 </nav>
               </div>
-      </div>
+      </div>  <!-- Heading and home links Ended -->
       <!-- TOtal Three Services imagesand content -->
     <div class="service container_12">
         <div class="grid_4" alpha>
             <img src="images/click.jpg">
             <h2>Searching for a Partner</h2>
-            <!-- <h5>We Help you</h5>
-              <p>For your brightest Future We Will be the Bridge</p> -->
           </div>
       <div class="grid_4">
           <img src="images/new.jpg">
           <h2>Contact Independently</h2>
-          <!-- <h5> No Mediator</h5>
-              <p>We will Show you the Your Future with good qualities</p> -->
       </div>
         <div class="grid_4"  omega>
                 <img src="images/centrepic.jpg" >
                 <h2>Try The New Things</h2>
-                <!-- <h5>Find The Perfect one</h5>
-                    <p>We Will Find you the Perfect match</p> -->
         </div>
     </div>
           <!-- TOtal Three Services imagesand content -->
@@ -68,22 +62,16 @@
       <div class="grid_4" alpha>
         <img src="images/1015.jpg">
         <h2> Make It Treditionally</h2>
-        <!-- <h5> Follow It And Be Happy</h5>
-        <p>We Will Help you to Follow Your Treditions</p> -->
       </div>
       <div class="grid_4">
         <img src="images/wed4.jpg">
         <h2>Make A Happy Weadding</h2>
-        <!-- <h5></h5>
-        <p></p> -->
       </div>
       <div class="grid_4">
         <img src="images/matrimonial.jpg">
         <h2>Search For The Partner</h2>
-      <!-- <h5></h5>
-      <p></p> -->
       </div>
-   </div>
+   </div><!-- TOtal Three Services imagesand content Ended -->
   <!-- The Footer Section -->
   <div class="footer container_12">
 
@@ -108,7 +96,7 @@
         <a href="#"><img src="images/youtube.jpg"></a>
      </div>
 
-    </div>
+   </div><!-- The Footer Section Ended -->
     <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
     </h4>
   </div>
