--- a/New.html
+++ b/New.html
@@ -30,12 +30,14 @@
     </nav>
     </div>
     </div>
+    <!-- Header section Endded -->
     <!-- The Hero image and content -->
     <div class="main2 container_12">
          <h3>Building Marriages With Strong Foundations</h3>
       <img src="images/SM.jpg">
     </div>
-      <!-- The Entire Header Section -->
+        <!-- The Hero image and content section ended -->
+      <!-- The Entire Service Section -->
     <div class="service container_12">
         <h1>Our Services</h1>
         <div class="grid_4" alpha>
@@ -56,7 +58,7 @@
                 <h5>Find Awesome</h5>
                 <p>We Will Find  The Perfect Match For You <a href="#">Read More..</a></p>
           </div>
-    </div>
+    </div><!-- The Entire Service Section ended -->
     <!-- The image and content -->
     <div class="section1 container_12">
             <div class="grid_4">
@@ -70,7 +72,7 @@
                 </p>
 
              </div>
-      </div>
+      </div>  <!-- The image and content  Ended-->
       <!-- The Content And Image -->
           <div class="section2 container_12">
             <div class="grid_8">
@@ -84,7 +86,7 @@
                 <img src="images/image5.jpg">
                 </div>
             </div>
-          </div>
+          </div><!-- The Content And Image Ended -->
           <!-- The Total Footer Section -->
           <div class="footer container_12">
 
@@ -109,7 +111,7 @@
                 <a href="#"><img src="images/youtube.jpg"></a>
              </div>
 
-            </div>
+           </div>  <!-- The Total Footer Section Ended -->
             <h4>Copyrights © 2015 All Rights Reserved by Matrimonial Inc
             </h4>
           </div>
